channelCount and channelCountMode constraints for DynamicsCompressor

For the DynamicsCompressorNode, the channelCount is constrained to be
one or two.  This implies that channelCountMode cannot be "max".
Implement these constraints.

Test updated to verify these constraints.

This makes DynamicsCompressorNode consistent with StereoPannerNode and
PannerNode which are also limited to supporting only mono and stereo
inputs.

Bug: 737142
Test: dynamicscompressor.html
Change-Id: Iaf405d40eff2c778e61c95ef54cbba709d54c885
Reviewed-on: https://chromium-review.googlesource.com/550597
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494560}
Former-commit-id: df2695285dbd49fc66d940ea08c71e09e9cc5583