third_party/WebKit/Source/modules/webaudio/DynamicsCompressorNode.cpp
@@ -24,6 +24,8 @@
  */
 
 #include "modules/webaudio/DynamicsCompressorNode.h"
+#include "bindings/core/v8/ExceptionMessages.h"
+#include "bindings/core/v8/ExceptionState.h"
 #include "modules/webaudio/AudioNodeInput.h"
 #include "modules/webaudio/AudioNodeOutput.h"
 #include "modules/webaudio/DynamicsCompressorOptions.h"
@@ -133,6 +135,55 @@ double DynamicsCompressorHandler::LatencyTime() const {
   return dynamics_compressor_->LatencyTime();
 }
 
+void DynamicsCompressorHandler::SetChannelCount(
+    unsigned long channel_count,
+    ExceptionState& exception_state) {
+  DCHECK(IsMainThread());
+  BaseAudioContext::AutoLocker locker(Context());
+
+  // A DynamicsCompressorNode only supports 1 or 2 channels
+  if (channel_count > 0 && channel_count <= 2) {
+    if (channel_count_ != channel_count) {
+      channel_count_ = channel_count;
+      if (InternalChannelCountMode() != kMax)
+        UpdateChannelsForInputs();
+    }
+  } else {
+    exception_state.ThrowDOMException(
+        kNotSupportedError, ExceptionMessages::IndexOutsideRange<unsigned long>(
+                                "channelCount", channel_count, 1,
+                                ExceptionMessages::kInclusiveBound, 2,
+                                ExceptionMessages::kInclusiveBound));
+  }
+}
+
+void DynamicsCompressorHandler::SetChannelCountMode(
+    const String& mode,
+    ExceptionState& exception_state) {
+  DCHECK(IsMainThread());
+  BaseAudioContext::AutoLocker locker(Context());
+
+  ChannelCountMode old_mode = InternalChannelCountMode();
+
+  if (mode == "clamped-max") {
+    new_channel_count_mode_ = kClampedMax;
+  } else if (mode == "explicit") {
+    new_channel_count_mode_ = kExplicit;
+  } else if (mode == "max") {
+    // This is not supported for a DynamicsCompressorNode, which can
+    // only handle 1 or 2 channels.
+    exception_state.ThrowDOMException(kNotSupportedError,
+                                      "The provided value 'max' is not an "
+                                      "allowed value for ChannelCountMode");
+    new_channel_count_mode_ = old_mode;
+  } else {
+    // Do nothing for other invalid values.
+    new_channel_count_mode_ = old_mode;
+  }
+
+  if (new_channel_count_mode_ != old_mode)
+    Context()->GetDeferredTaskHandler().AddChangedChannelCountMode(this);
+}
 // ----------------------------------------------------------------
 
 DynamicsCompressorNode::DynamicsCompressorNode(BaseAudioContext& context)
